bynkc/tests/fixtures/negative/136_integration_mock_in_integration/src/app/b.bynk
context app.b
service pong {
  on call() -> Effect[Int] { 2 }
}
